# deckr

./: .gitignore  .importlinter  AGENTS.md  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
docs/: bus-architecture.md  device-capabilities-architecture.md  runtime-architecture.md  runtime-modes.md
src/deckr/: cli.py  launcher.py  runtime.py
src/deckr/bridges/: __init__.py  _common.py  _lanes.py  mqtt.py  websocket.py
src/deckr/components/: __init__.py  _host.py  _runner.py
src/deckr/contracts/: __init__.py  lanes.py  messages.py  models.py
src/deckr/core/: _bridge.py  components.py  config.py  logging.py  messaging.py
src/deckr/core/component/: __init__.py  _defs.py  _runner.py
src/deckr/core/mqtt/: __init__.py  _gateway.py
src/deckr/core/util/: anyio.py  host_id.py  pydantic.py  runtime_id.py
src/deckr/core/websocket/: __init__.py  _gateway.py
src/deckr/hardware/: events.py  messages.py
src/deckr/hw/: __init__.py  events.py
src/deckr/plugin/: config.py  core_api.py  events.py  extensions.py  graph_image.py  graph_wire.py  interface.py  lifecycle.py  manifest.py  messages.py  metadata.py  rendering.py  types.py
src/deckr/pluginhost/: __init__.py  messages.py
src/deckr/python_plugin/: __init__.py  core_api.py  extensions.py  interface.py
src/deckr/transports/: __init__.py  _common.py  _lanes.py  bus.py  mqtt.py  routes.py  websocket.py
tests/: __init__.py  conftest.py  test_bridge_components.py  test_core_config.py  test_core_providers.py  test_core_services.py  test_deckr_hw.py  test_deckr_plugins.py  test_graph_wire.py  test_host_id.py  test_hw_events_wire.py  test_hw_messages_wire.py  test_launcher.py  test_mqtt_gateway.py  test_plugin_config.py  test_plugin_events.py  test_plugin_message_contracts.py  test_plugin_protocol_layers.py  test_runtime.py  test_runtime_id.py  test_service.py  test_transport_bus.py  test_transport_components.py  test_websocket_gateway.py
