[project]
name = "deckr-workspace"
version = "0.1.0"
description = "Workspace for deckr core contracts and deckr-controller"
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
license = { text = "MIT" }
authors = [
    { name = "Kaj Siebert", email = "kaj@k-si.com" }
]
dependencies = [
    "deckr",
    "deckr-controller",
]

[dependency-groups]
dev = [
    "import-linter>=2.11,<3.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.14.14,<0.15.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/deckr",
    "packages/deckr-controller",
]

[tool.uv.sources]
deckr = { workspace = true }
deckr-controller = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E203",
    "E501",
    "SIM102",
    "SIM105",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=packages/deckr/src/deckr",
    "--cov=packages/deckr-controller/src/deckr",
    "--cov-report=term-missing",
]
testpaths = [
    "packages/deckr/tests",
    "packages/deckr-controller/tests",
]
