[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckr"
version = "0.3.0.dev0"
description = "Deckr core contracts and runtime primitives for hardware, plugins, and controllers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaj Siebert", email = "kaj@k-si.com" }
]
requires-python = ">=3.11,<4.0.0"
keywords = ["deckr", "stream-deck", "hardware", "plugins", "controller"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = [
    "anyio>=4.12.1,<5.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[project.scripts]
deckr = "deckr.cli:main"

[project.optional-dependencies]
cli = [
    "click>=8.3.1,<9.0.0",
]
mqtt = [
    "aiomqtt>=2.0.0,<3.0.0",
]
websocket = [
    "websockets>=15.0.1,<16.0.0",
]
all = [
    "deckr[cli,mqtt,websocket]",
]

[project.entry-points."deckr.components"]
"deckr.bridges.mqtt" = "deckr.bridges.mqtt:component"
"deckr.bridges.websocket" = "deckr.bridges.websocket:component"

[project.urls]
Documentation = "https://github.com/kws/deckr#readme"
Homepage = "https://github.com/kws/deckr"
Repository = "https://github.com/kws/deckr"
"Bug Tracker" = "https://github.com/kws/deckr/issues"
"Changelog" = "https://github.com/kws/deckr/releases"

[dependency-groups]
dev = [
    "aiomqtt>=2.0.0,<3.0.0",
    "click>=8.3.1,<9.0.0",
    "import-linter>=2.11,<3.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.14.14,<0.15.0",
    "websockets>=15.0.1,<16.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deckr"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "E203",
    "E501",
    "SIM102",
    "SIM105",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src/deckr",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
